# itfest-project-2024

./: README.md  docker-compose.yml
Frontend/: Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  index.css  main.jsx  mockData.js
Frontend/src/components/BookCard/: BookCard.css  BookCard.jsx
Frontend/src/components/BookCardList/: BookCardList.css  BookCardList.jsx
Frontend/src/components/Header/: Header.css  Header.jsx
Frontend/src/components/SearchBar/: SearchBar.css  SearchBar.jsx
K8s/: commands-depl.yml  platforms-depl.yml
Kubernetes/: backend-depl.yml  frondend-depl.yml  ingress-srv.yml  storage-db-depl.yml
ai-generator-summary-service/: data.json  flaud_lite.py  pyproject.toml
flaud-book/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
flaud-book/app/: main.py
flaud-book/app/configs/: database.py
flaud-book/app/models/: book.py
flaud-book/app/routers/: book.py
flaud-book/app/schemas/: book.py
flaud-book/app/services/: ai_summary_generator.py
flaud-book/app/utils/: data.json  seeder.py
flaud01/: pyproject.toml
